# HCMUT-NQPN

./: .gitignore  FORMATTER_README.md  README.md  app.py  chainlit.md  print_schemas.py  pyproject.toml  pyrightconfig.json  todo.txt
.chainlit/: custom.css  custom.js
.chainlit/.chainlit/: config.toml  custom.css  custom.js
.chainlit/.chainlit/translations/: bn.json  de-DE.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ko.json  ml.json  mr.json  (+5 more)
docker/: Docker.md  docker-compose.yaml
examples/: README_MOCK_DATA.md  README_RUN_SERVICES.md  README_TEST_RAG.md  clear_neo4j_data.py  clear_neo4j_quick.py  create_mock_data.py  example_queries.md  quick_fix_test.py  rag_test.py  recreate_milvus_collection.py  test.py  test_embedder.py  test_gpt5.py  test_graphrag_with_tools.py  test_ingest_agent.py
fixed_website/: README.md  index.html  script.js  styles.css
public/elements/: AgentStatus.jsx  MultiAgentDashboard.jsx
src/agents/: DEFAULT_VALUES.md  business_analysis_agent.py  formatter_agent.py  guardrail_agent.py  guardrail_models.py  ingest_agent.py  orchestrator_agent.py  prompt_generator_agent.py  rag_agent.py  suggestion_agent.py  suggestion_models.py  supporter.py  web_generator_agent.py
src/core/: config.py
src/data_pipeline/: embedder.py
src/db/: milvus_client.py  neo4j_client.py  redis_client.py
src/tools/: __init__.py  context_builder_tool.py  extract_concepts_tool.py  formatter_tool.py  milvus_ingest_tool.py  milvus_search_tool.py  neo4j_ingest_tool.py  neo4j_search_tool.py  web_search_tool.py
(+1 files in other folders)
